--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,8 +3,8 @@
 /_02_static_smiley_blues/
 /_04_netflix/
 /_05_cow_timer/
+/_06_frogger/
 /_99_extra/
 /gridworld.jar
 /javazoom.jar
 /league_token/
-/_01_/
